# adapta-dark-paradise-gtk-theme

./: Makefile.am  README.md  adapta_colors  configure.ac
extra/telegram/dark/: colors.tdesktop-theme
gtk/sass/common/: _colors.scss
m4/: adapta-color-scheme.m4
shell/sass/common/: _colors.scss
